Face Detection Feature is Now working