@@ -90,6 +90,23 @@
 			<artifactId>opencv</artifactId>
 			<version>4.9.0-0</version>
 		</dependency>
+
+<!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.opencv/opencv &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>org.opencv</groupId>-->
+<!--			<artifactId>opencv</artifactId>-->
+<!--			<version>4.11.0</version>-->
+<!--		</dependency>-->
+
+
+<!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.bytedeco/opencv-platform &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>org.bytedeco</groupId>-->
+<!--			<artifactId>opencv-platform</artifactId>-->
+<!--			<version>4.10.0-1.5.11</version>-->
+<!--		</dependency>-->
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -124,6 +141,15 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>21</source>
+					<target>21</target>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
